src/test/ui/const-generics/const-arg-type-arg-misordered.stderr
warning: the feature `const_generics` is incomplete and may cause the compiler to crash
  --> $DIR/const-arg-type-arg-misordered.rs:1:12
   |
LL | #![feature(const_generics)]
   |            ^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default

error[E0747]: constant provided when a type was expected
  --> $DIR/const-arg-type-arg-misordered.rs:6:35
   |
LL | fn foo<const N: usize>() -> Array<N, ()> {
   |                                   ^
   |
   = note: type arguments must be provided before constant arguments

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0747`.
